<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_header">Welcome to the Shoe Inventory App!</string>
    <string name="welcome_body">Store and retrieve shoe information about your favorite shoes.</string>
    <string name="button_instructions">Instructions</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="instructions_header">Instructions</string>
    <string name="step_one">1. Click the plus sign to add a new shoe to your inventory</string>
    <string name="step_two">2. Click the Save button to save the shoe item</string>
    <string name="button_to_list">Go To List</string>
    <string name="add_item">Add Shoe</string>
    <string name="string_add_item">Add Shoe</string>
    <string name="shoe_content">Image</string>
    <string name="shoe_name">Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_description">Description</string>
    <string name="logout">logout</string>
    <string name="shoe_size_et">Size</string>
    <string name="add">Add shoe</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login or Signup</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_inventory">Shoe Inventory</string>
    <string name="add_new_shoe">Add shoe item</string>
</resources>
