<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="instructionsViewModel"
            type="com.udacity.shoestore.screens.InstructionsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instruction_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.InstructionsFragment">

        <TextView
            android:id="@+id/instructions_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/instructions_header"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/instructions_step_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_button"
            android:text="@string/step_one"
            app:layout_constraintStart_toStartOf="@+id/instructions_header"
            app:layout_constraintTop_toBottomOf="@+id/instructions_header" />

        <TextView
            android:id="@+id/instructions_step_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_button"
            android:text="@string/step_two"
            app:layout_constraintStart_toStartOf="@+id/instructions_step_one"
            app:layout_constraintTop_toBottomOf="@+id/instructions_step_one" />

        <Button
            android:id="@+id/button_to_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_to_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.793" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
