<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <EditText
            android:id="@+id/edit_text_shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:alpha="0.5"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="text"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@={shoe.name}" />

        <EditText
            android:id="@+id/edit_text_shoe_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:alpha="0.5"
            android:ems="10"
            android:hint="@string/shoe_size_et"
            android:importantForAutofill=""
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_company"
            android:text="@={`` + shoe.size}" />

        <EditText
            android:id="@+id/edit_text_shoe_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:alpha="0.5"
            android:ems="10"
            android:hint="@string/shoe_company"
            android:importantForAutofill=""
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_name"
            android:text="@={shoe.company}" />

        <EditText
            android:id="@+id/edit_text_shoe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:alpha="0.5"
            android:ems="10"
            android:hint="@string/shoe_description"
            android:importantForAutofill=""
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_size"
            app:layout_constraintVertical_bias="0.033"
            android:text="@={shoe.description}"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/button_cancel"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_cancel"
            tools:text="@string/add" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel"
            android:onClick="actionReturnToList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_description"
            tools:text="@string/cancel" />
    
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
