<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.screens.WelcomeFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".screens.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_button"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            android:text="@string/welcome_header"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/welcome_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/welcome_body"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/welcome_header"
            app:layout_constraintTop_toBottomOf="@+id/welcome_header"
            app:layout_constraintVertical_bias="0.184" />

        <Button
            android:id="@+id/button_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:enabled="true"
            android:paddingTop="@dimen/padding_button"
            android:paddingBottom="@dimen/padding_button"
            android:shadowColor="#FFFFFF"
            android:text="@string/button_instructions"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcome_body"
            app:layout_constraintStart_toStartOf="@+id/welcome_body"
            app:layout_constraintTop_toBottomOf="@+id/welcome_body" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
